--- a/upload/src/main/resources/application.properties
+++ b/upload/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+logging.level.org.apache.coyote.http11=debug
 
+# MultiPart Form ?? ?? X
+#spring.servlet.multipart.enabled=false
+
+file.dir= "/?????? ??/"
