--- a/JPA_WebApplication/jpashop/src/main/resources/application.yml
+++ b/JPA_WebApplication/jpashop/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
   jpa:
     hibernate:
       ddl-auto: create # ?????? ?? ???? ?? ???? ??
@@ -17,3 +21,4 @@ logging:
   level:
     org.hibernate.SQL: debug
 # org.hibernate.type: trace
+
